lintian (2.5.42) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/copyright-file.pm:
    + [NT] Apply patch from Rafael Kitover to avoid some
      false-positives with the DEP-5 copyright format.
      (Closes: #795641)

  * debian/control:
    + [NT] Add (Build-)Dependency on libdata-alias-perl due
      to patch from Rafael Kitover.

 -- Niels Thykier <niels@thykier.net>  Fri, 19 Feb 2016 18:59:49 +0000

lintian (2.5.41) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - insane-line-length-in-source-file
      - source-contains-prebuilt-pandoc-documentation
      - upstream-metadata-is-not-a-file
      - upstream-metadata-yaml-invalid
    + Removed:
      - package-contains-broken-symlink

  * checks/apache2.desc:
    + [JW] Remove spurious check name abbreviation.
  * checks/binaries.pm:
    + [NT] Update match for detecting numpy linking.
  * checks/cruft.{desc,pm}:
    + [BR] Filter some simple comments for long line in source-is-missing
      (Closes: #798900).
    + [BR] Detect pandoc docs avoiding source-is-missing warning.
    + [BR] Fix other source-is-missing FP. (Closes: #813013).
  * checks/fields.pm:
    + [NT] Emit "no-homepage-field" only for source packages.
  * checks/files.pm:
    + [JW] Treat packages without Multi-Arch field as if they had
      "Multi-Arch: no".  Thanks to Bas Couwenberg for the bug report.
  * checks/scripts.desc:
    + [JW] Fix typos.
  * checks/symlinks.{desc,pm}:
    + [NT] Retire package-contains-broken-symlink tag.  It was too much
      effort compared to the gain.  (Closes: #672297, #683059, #763270,
      #812723, #661003, #738187)
  * checks/testsuite.{desc,pm}:
    + [JW, NT] Apply patch from Christian Seiler to accept DEP-8 tests
      being symlinks to existing files in the source package.  Thanks
      to Raphaël Hertzog for suggesting it.  (Closes: #809440)
  * checks/upstream-metadata.{desc,pm}:
    + [NT] Apply patch from Petter Reinholdtsen to check that the