@@ -6,6 +6,9 @@ lintian (2.5.42) UNRELEASED; urgency=medium
     + [NT] Apply patch from Rafael Kitover to avoid some
       false-positives with the DEP-5 copyright format.
       (Closes: #795641)
+  * checks/systemd.{desc,pm}:
+    + [NT] Apply patch from Chris Lamb to flag systemd units
+      without the "Documentation" key.  (Closes: #799083)
 
   * debian/control:
     + [NT] Add (Build-)Dependency on libdata-alias-perl due
